--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nuxt": "^2.15.3"
   },
   "devDependencies": {
-    "@nuxtjs/vuetify": "^1.11.3"
+    "@nuxtjs/vuetify": "^1.11.3",
+    "push-dir": "^0.4.1"
   }
 }
